CMF 1.5.0beta2 (unreleased)

  New Features

    - PortalFolder: Improved WebDAV folder listings.
      Hidden sub-objects like tools are now filtered out. To see all
      sub-objects, you need the 'Manage portal' permission.

    - TypesTool: New properties can be added from the ZMI to
      TypeInformation objects.

  Bug Fixes

    - ZPT skin: Added missing mail_password_template.

    - TypeInformation: Simplified Method Aliases API.
      The new queryMethodID() replaces getMethodPath() and getMethodURL().
      Aliases for method paths are no longer supported.

    - FSFile: Allow setting a content_type value using a .metadata file
      (http://www.zope.org/Collectors/CMF/281)

    - FSPageTemplate: Refine the XML content type detection so that
      addtional data such as encoding is preserved
      (http://www.zope.org/Collectors/CMF/228)

    - ActionInformation: If a path expression ending in an object that
      gets called using __render_with_namespace__ (such as DTML objects
      and Scripts (Python)) is used a KeyError for "here" would be thrown
      inside PageTemplates.ZRPythonExpr.call_with_ns. call_with_ns
      expects the namespace to contain "here", which the context coming
      from CMFCore.Expressions.createExprContext did not provide. Added
      "here" as an alias pointing to the provided "object"
      (http://www.zope.org/Collectors/CMF/171)

    - DiscussionItem: Made sure that the workflow is notified of their
      creation (Issue #280).

    - http://www.zope.org/Collectors/CMF/205: When pasting a content item,
      local roles were not changed to reflect the neew ownership.

    - ZPT skin: Added missing RSS script and template.
      (http://zope.org/Collectors/CMF/279)

    - DirectoryView: Improved createDirectoryView() backwards compatibility.
      Using platform specific path separators is deprecated.

    - UniqueIdAnnotation: Fixed manage_after* methods.
      They didn't work correctly in nested folders.
